crates/rdf/src/native_codecs/parse.rs
// SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
// SPDX-License-Identifier: AGPL-3.0-only

//! Native RDF text → frozen [`RdfDataset`] IR ingress.
//!
//! Parses Turtle / TriG / N-Triples / N-Quads through the FIRST-PARTY
//! [`text_parse`](super::text_parse) front-end (RDF/XML through the first-party
//! [`rdfxml`](super::rdfxml) codec) into a first-party in-memory
//! [`SerGraph`](super::ser_model::SerGraph), then walks that graph into a
//! [`RdfDatasetBuilder`] applying the RDF 1.2 statement-layer fold.
//!
//! The fold is factored into [`fold_statement_layer`], a source-agnostic two-pass
//! classifier over `(subject, predicate, object, graph)` rows that BOTH this native
//! path and the legacy `dataset_io::dataset_from_oxigraph_quads` feed — one fold, no
//! drift (the must-pass RDF 1.2 fixture parity is the guard).
//!
//! Base IRI is handled per the plan: Turtle/TriG resolve relative IRIs against the
//! supplied base; RDF/XML threads the base through the first-party
//! [`rdfxml`](super::rdfxml) codec's `ParseContext`; N-Triples/N-Quads require
//! absolute IRIs and ignore the base (N/A by syntax).

use std::collections::HashSet;
use std::panic::{catch_unwind, AssertUnwindSafe};
use std::sync::Arc;

use super::media_type::{classify, NativeRdfFormat};
use super::ser_model::{SerGraph, SerTermKind};
use crate::{
    BlankScope, RdfDataset, RdfDatasetBuilder, RdfDiagnostic, RdfLiteral, RdfTextDirection, TermId,
};

/// The `rdf:reifies` predicate IRI: a triple-term object under this predicate is the
/// RDF 1.2 reifier binding the statement layer folds out of the base quad table.
pub(crate) const RDF_REIFIES: &str = "http://www.w3.org/1999/02/22-rdf-syntax-ns#reifies";

/// A subject/object node presented to [`fold_statement_layer`], already interned into
/// the builder. The predicate IRI string travels alongside (see [`FoldRow`]) so the
/// `rdf:reifies` classification can compare it WITHOUT re-resolving the interned id.
#[derive(Clone, Copy)]
pub(crate) enum FoldNode {
    /// An already-interned leaf or (recursively) interned triple-term object.
    Term(TermId),
    /// A triple term whose components are already interned — folded as a reifier
    /// binding when it appears as the object of an `rdf:reifies` row, otherwise
    /// re-interned as a quoted-triple object.
    Triple { s: TermId, p: TermId, o: TermId },
}

/// One `(subject, predicate, object, graph)` row, source-agnostic over oxigraph quads
/// and folded GTS graphs. Every component id is already interned in the SAME builder
/// the fold pushes into; `predicate_iri` carries the predicate's IRI string for the
/// `rdf:reifies` check (the predicate id is `predicate`).
pub(crate) struct FoldRow {
    pub subject: TermId,
    pub predicate_iri: String,
    pub predicate: TermId,
    pub object: FoldNode,
    pub graph: Option<TermId>,
}

/// The RDF 1.2 statement-layer fold, shared by the native codec path and the legacy
/// oxigraph-quads path so the two can never drift (the parity fixture is the guard).
///
/// Pass 1 binds reifiers: a row whose predicate is `rdf:reifies` with a triple-term
/// object becomes a `push_reifier(subject, triple)` binding and the subject id is
/// recorded as a reifier. Pass 2 classifies the remaining rows: a reifier subject's
/// other triples are annotations (`push_annotation`), everything else a base quad
/// (`push_quad`). This mirrors `dataset_io.rs:34-65` exactly.
pub(crate) fn fold_statement_layer<I>(
    builder: &mut RdfDatasetBuilder,
    rows: I,
) -> Result<(), RdfDiagnostic>
where
    I: IntoIterator<Item = FoldRow>,
{
    // Pass 1: bind reifiers; collect the rest as pending base/annotation rows.
    let mut reifier_ids: HashSet<TermId> = HashSet::new();
    let mut pending: Vec<(TermId, TermId, TermId, Option<TermId>)> = Vec::new();
    for row in rows {
        let FoldRow {
            subject,
            predicate_iri,
            predicate,
            object,
            graph,
        } = row;
        if predicate_iri == RDF_REIFIES {
            if let FoldNode::Triple { s, p, o } = object {
                let triple_term = builder.intern_triple(s, p, o);
                builder.push_reifier(subject, triple_term);
                reifier_ids.insert(subject);
                continue;
            }
        }
        let object_id = match object {
            FoldNode::Term(id) => id,
            FoldNode::Triple { s, p, o } => builder.intern_triple(s, p, o),
        };
        pending.push((subject, predicate, object_id, graph));
    }

    // Pass 2: a reifier subject's other triples are annotations; the rest base quads.
    for (subject, predicate, object, graph) in pending {
        if reifier_ids.contains(&subject) {
            builder.push_annotation(subject, predicate, object);
        } else {
            builder.push_quad(subject, predicate, object, graph);
        }
    }
    Ok(())
}

/// Parse RDF text bytes of `media_type` into a frozen [`RdfDataset`].
///
/// Steps: UTF-8 validate (hard-fail `native-codec-utf8`); parse the line/Turtle family
/// (N-Triples, N-Quads, Turtle, TriG) FIRST-PARTY into an in-memory [`SerGraph`] via
/// [`text_parse`](super::text_parse), and RDF/XML through the FIRST-PARTY
/// [`rdfxml`](super::rdfxml) codec (no external gmeow-gts text / RDF-XML codec); then
/// walk that graph through [`fold_statement_layer`] and freeze.
pub fn parse_dataset(
    bytes: &[u8],
    media_type: &str,
    base_iri: Option<&str>,
) -> Result<Arc<RdfDataset>, RdfDiagnostic> {
    let format = classify(media_type)?;
    let text = std::str::from_utf8(bytes)
        .map_err(|e| RdfDiagnostic::error("native-codec-utf8", e.to_string()))?;

    match format {
        // The line/Turtle family parses FIRST-PARTY straight into the first-party
        // in-memory SerGraph the statement-layer fold consumes — no gmeow-gts text
        // codec, no text→bytes→reader indirection. This also decodes `\uXXXX` UCHAR
        // escapes inside IRIREFs (W3C test060), which the gmeow-gts IRIREF readers
        // rejected.
        NativeRdfFormat::NTriples
        | NativeRdfFormat::NQuads
        | NativeRdfFormat::Turtle
        | NativeRdfFormat::TriG => {
            let graph = text_parse_without_panicking(format, text, base_iri)?;
            dataset_from_ser_graph(&graph)
        }
        // RDF/XML parses FIRST-PARTY through the in-repo `rdfxml` codec (W3C RDF/XML
        // grammar over a pure-Rust XML DOM). The codec still hands back a
        // `gmeow_gts::model::Graph`; the GtsGraph→SerGraph hop here is TEMPORARY,
        // pending the native RDF/XML cutover that retires the gmeow-gts model from
        // the RDF/XML arm.
        NativeRdfFormat::RdfXml => {
            let graph = parse_rdfxml_without_panicking(text, base_iri)?;
            let ser = crate::gts::gts_to_ser(&graph);
            dataset_from_ser_graph(&ser)
        }
    }
}

fn text_parse_without_panicking(
    format: NativeRdfFormat,
    text: &str,
    base_iri: Option<&str>,
) -> Result<SerGraph, RdfDiagnostic> {
    let outcome = catch_unwind(AssertUnwindSafe(|| {
        super::text_parse::parse_to_gts_graph(format, text, base_iri)
    }));
    match outcome {
        Ok(result) => result,
        Err(payload) => Err(RdfDiagnostic::error(
            "native-codec-panic",
            format!(
                "native RDF text parser panicked while parsing {}: {}",
                format.media_type(),
                panic_payload_message(payload.as_ref()),
            ),
        )),
    }
}

fn parse_rdfxml_without_panicking(
    text: &str,
    base_iri: Option<&str>,
) -> Result<gmeow_gts::model::Graph, RdfDiagnostic> {
    let outcome = catch_unwind(AssertUnwindSafe(|| {
        super::rdfxml::parse_rdfxml_to_gts_graph(text, base_iri)
    }));
    match outcome {
        Ok(result) => result,
        Err(payload) => Err(RdfDiagnostic::error(
            "native-codec-panic",
            format!(
                "native RDF/XML codec panicked while parsing {}: {}",
                NativeRdfFormat::RdfXml.media_type(),
                panic_payload_message(payload.as_ref()),
            ),
        )),
    }
}

fn panic_payload_message(payload: &(dyn std::any::Any + Send)) -> String {
    if let Some(message) = payload.downcast_ref::<&str>() {
        (*message).to_owned()
    } else if let Some(message) = payload.downcast_ref::<String>() {
        message.clone()
    } else {
        "non-string panic payload".to_owned()
    }
}

/// Walk a first-party [`SerGraph`] into a frozen [`RdfDataset`] through the shared
/// [`fold_statement_layer`].
///
/// The first-party parse path folds `rdf:reifies` triples into the graph's `reifiers`
/// table (they never appear in `quads`) AND classifies a reifier's sibling triples into
/// the `annotations` table — the parser owns reifier identity, including anonymous `[]`
/// reifiers. To feed the SAME two-pass fold the oxigraph path uses — and reach the SAME
/// IR — this re-materializes each reifier binding as a synthetic
/// `<reifier> rdf:reifies <<( s p o )>>` row and each annotation as a
/// `<reifier> <predicate> <value>` row alongside the plain quads, so pass 1 re-binds
/// reifiers and pass 2 classifies the reifier subjects' rows as annotations. Term
/// interning is shared across all rows, so identical terms collapse to one id exactly as
/// on the oxigraph path.
pub fn dataset_from_ser_graph(graph: &SerGraph) -> Result<Arc<RdfDataset>, RdfDiagnostic> {
    dataset_from_ser_graph_impl(graph, false)
}

/// Like [`dataset_from_ser_graph`], but folds **every** named graph into the default
/// graph (drops each base quad's graph component) — the oxigraph-free twin of
/// `store_from_dataset(.., GraphPolicy::FlattenToDefaultGraph)`. This is the load
/// path the native conformance gate replays against the frozen oxigraph goldens
/// (which were captured over a flattened store). The statement layer (`rdf:reifies`
/// reifiers + annotations) has no graph dimension, so only the base-quad graph
/// component changes.
pub fn flattened_dataset_from_ser_graph(
    graph: &SerGraph,
) -> Result<Arc<RdfDataset>, RdfDiagnostic> {
    dataset_from_ser_graph_impl(graph, true)
}

fn dataset_from_ser_graph_impl(
    graph: &SerGraph,
    flatten_to_default_graph: bool,
) -> Result<Arc<RdfDataset>, RdfDiagnostic> {
    let mut builder = RdfDatasetBuilder::new();
    let interner = SerInterner { graph };

    let mut rows: Vec<FoldRow> =
        Vec::with_capacity(graph.quads.len() + graph.reifiers.len() + graph.annotations.len());

    // Synthetic `rdf:reifies` rows reconstructed from the GTS reifier table, so the
    // shared fold re-binds them identically to the oxigraph path (pass 1). A
    // self-reifier sentinel — a `Triple` term whose `reifier` is its OWN id — is the
    // binding of an inline quoted-triple term used as a quad object, NOT a statement-
    // layer reifier; it carries no `<reifier> rdf:reifies <<…>>` row (the N-Quads
    // serializer skips it identically) and is resolved when its parent quad interns the
    // object. Emitting a synthetic row for it would make a quoted triple the subject of
    // `rdf:reifies`, which the IR rejects.
    for &(reifier_id, (s, p, o), _graph) in &graph.reifiers {
        if graph.terms.get(reifier_id).is_some_and(|term| {
            term.kind == SerTermKind::Triple && term.reifier == Some(reifier_id)
        }) {
            continue;
        }
        let subject = interner.intern(&mut builder, reifier_id)?;
        let predicate = builder.intern_iri(RDF_REIFIES.to_owned());
        let s = interner.intern(&mut builder, s)?;
        let p = interner.intern(&mut builder, p)?;
        let o = interner.intern(&mut builder, o)?;
        rows.push(FoldRow {
            subject,
            predicate_iri: RDF_REIFIES.to_owned(),
            predicate,
            object: FoldNode::Triple { s, p, o },
            graph: None,
        });
    }

    // Base quad rows.
    for &(s, p, o, g) in &graph.quads {
        let subject = interner.intern(&mut builder, s)?;
        let predicate_iri = interner.iri_string(p)?;
        let predicate = interner.intern(&mut builder, p)?;
        let object = interner.intern_node(&mut builder, o)?;
        let graph = match g {
            Some(_) if flatten_to_default_graph => None,
            Some(g) => Some(interner.intern(&mut builder, g)?),
            None => None,
        };
        rows.push(FoldRow {
            subject,
            predicate_iri,
            predicate,
            object,
            graph,
        });
    }

    // Annotation rows the codec already classified into the GTS `annotations` table.
    // Re-materialized as `<reifier> <predicate> <value>` rows so the shared fold's pass 2
    // classifies them as annotations (the reifier subject is bound above). This is the
    // GENERAL RDF-1.2 parser, so it must accept arbitrary input including the W3C suite's
    // graph-scoped (TriG) reification — the optional graph slot is FLATTENED here, exactly
    // as `fold_statement_layer` already folds the `rdf:reifies` binding graph-blind: the
    // IR's statement layer is graph-free (world × standpoint = JOIN, not graph). gmeow's
    // OWN carrier never carries a graph-scoped row (the bundle-import paths enforce that).
    for &(reifier_id, predicate_id, value_id, _graph_slot) in &graph.annotations {
        let subject = interner.intern(&mut builder, reifier_id)?;
        let predicate_iri = interner.iri_string(predicate_id)?;
        let predicate = interner.intern(&mut builder, predicate_id)?;
        let object = interner.intern_node(&mut builder, value_id)?;
        rows.push(FoldRow {
            subject,
            predicate_iri,
            predicate,
            object,
            graph: None,
        });
    }

    fold_statement_layer(&mut builder, rows)?;
    builder.freeze()
}

/// Intern [`SerGraph`] terms into a builder, resolving quoted-triple terms through their
/// reifier binding. Every folded blank node lands in [`BlankScope::DEFAULT`] (the
/// folded graph has already collapsed per-segment scope — the documented
/// `bnode-scope-flatten` loss, identical to `import_gts_graph`).
struct SerInterner<'a> {
    graph: &'a SerGraph,
}

impl SerInterner<'_> {
    /// Intern a term id into the builder, returning its [`TermId`]. A quoted-triple
    /// term resolves its `(s, p, o)` through the reifier table and interns as a triple.
    fn intern(
        &self,
        builder: &mut RdfDatasetBuilder,
        gts_id: usize,
    ) -> Result<TermId, RdfDiagnostic> {
        match self.intern_node(builder, gts_id)? {
            FoldNode::Term(id) => Ok(id),
            FoldNode::Triple { s, p, o } => Ok(builder.intern_triple(s, p, o)),
        }
    }

    /// Intern a GTS term id, returning a [`FoldNode`]: a leaf becomes `Term`, a
    /// quoted-triple term becomes `Triple` (its components already interned) so a
    /// caller can fold it as a reifier binding rather than re-interning it.
    fn intern_node(
        &self,
        builder: &mut RdfDatasetBuilder,
        gts_id: usize,
    ) -> Result<FoldNode, RdfDiagnostic> {
        let term = self.graph.terms.get(gts_id).ok_or_else(|| {
            RdfDiagnostic::error(
                "native-codec-term-out-of-range",
                format!("GTS term id {gts_id} is out of range"),
            )
        })?;
        match term.kind {
            SerTermKind::Iri => {
                let iri = term
                    .value
                    .as_deref()
                    .filter(|v| !v.is_empty())
                    .ok_or_else(|| {
                        RdfDiagnostic::error(
                            "native-codec-iri-missing-value",
                            "GTS IRI term requires a non-empty value",
                        )
                    })?;
                Ok(FoldNode::Term(builder.intern_iri(iri.to_owned())))
            }
            SerTermKind::Bnode => {
                let label = term
                    .value
                    .clone()
                    .unwrap_or_else(|| format!("gts_bnode_{gts_id}"));
                Ok(FoldNode::Term(
                    builder.intern_blank(label, BlankScope::DEFAULT),
                ))
            }
            SerTermKind::Literal => {
                let datatype = match term.datatype {
                    Some(dt_id) => Some(self.iri_string(dt_id)?),
                    None => None,
                };
                let direction =
                    parse_gts_direction(term.direction.as_deref(), term.lang.as_deref())?;
                Ok(FoldNode::Term(builder.intern_literal(RdfLiteral {
                    lexical_form: term.value.clone().unwrap_or_default(),
                    datatype,
                    language: term.lang.clone(),
                    direction,
                })))
            }
            SerTermKind::Triple => {
                let reifier_id = term.reifier.ok_or_else(|| {
                    RdfDiagnostic::error(
                        "native-codec-unbound-triple-term",
                        "GTS triple term has no reifier binding",
                    )
                })?;
                let (s, p, o) = self.graph.reifier(reifier_id).ok_or_else(|| {
                    RdfDiagnostic::error(
                        "native-codec-missing-reifier-binding",
                        format!("GTS triple term references missing reifier {reifier_id}"),
                    )
                })?;
                let s = self.intern(builder, s)?;
                let p = self.intern(builder, p)?;
                let o = self.intern(builder, o)?;
                Ok(FoldNode::Triple { s, p, o })
            }
        }
    }

    /// Intern a GTS term id known to occupy an IRI position (predicate / datatype),
    /// returning its IRI string for the `rdf:reifies` check and literal datatype.
    fn iri_string(&self, gts_id: usize) -> Result<String, RdfDiagnostic> {
        let term = self.graph.terms.get(gts_id).ok_or_else(|| {
            RdfDiagnostic::error(
                "native-codec-term-out-of-range",
                format!("GTS term id {gts_id} is out of range"),
            )
        })?;
        match term.kind {
            SerTermKind::Iri => term.value.clone().filter(|v| !v.is_empty()).ok_or_else(|| {
                RdfDiagnostic::error(
                    "native-codec-iri-missing-value",
                    "GTS IRI term requires a non-empty value",
                )
            }),
            other => Err(RdfDiagnostic::error(
                "native-codec-predicate-not-iri",
                format!("GTS term in an IRI position must be an IRI, got {other:?}"),
            )),
        }
    }
}

/// Parse a GTS literal base-direction string (`"ltr"`/`"rtl"`) into the IR's
/// [`RdfTextDirection`], mirroring `gmeow_rdf_core`'s `parse_gts_direction`: `None` is
/// legitimate absence, an unrecognized non-empty value hard-fails, and RDF 1.2 admits
/// a direction ONLY on a language-tagged string (a direction without a language is a
/// hard error rather than a silently ill-formed literal).
fn parse_gts_direction(
    value: Option<&str>,
    language: Option<&str>,
) -> Result<Option<RdfTextDirection>, RdfDiagnostic> {
    let direction = match value {
        None => return Ok(None),
        Some("ltr") => RdfTextDirection::Ltr,
        Some("rtl") => RdfTextDirection::Rtl,
        Some(other) => {
            return Err(RdfDiagnostic::error(
                "native-codec-invalid-direction",
                format!("unrecognized GTS literal base direction {other:?}"),
            ))
        }
    };
    if language.is_none_or(str::is_empty) {
        return Err(RdfDiagnostic::error(
            "native-codec-direction-without-language",
            "an RDF 1.2 literal base direction requires a non-empty language tag",
        ));
    }
    Ok(Some(direction))
}

#[cfg(test)]
mod tests {
    use super::*;
    use crate::TermValue;

    #[test]
    fn parses_basic_ntriples() {
        let nt = "<https://e/s> <https://e/p> <https://e/o> .\n\
                  <https://e/s> <https://e/p2> \"lit\" .\n";
        let ds = parse_dataset(nt.as_bytes(), "application/n-triples", None).expect("parse");
        assert_eq!(ds.quad_count(), 2);
        assert!(ds.term_count() >= 4);
    }

    #[test]
    fn folds_rdf12_statement_layer_to_parity() {
        // The exact RDF 1.2 fixture from dataset_io.rs:131: a reifier binding + an
        // annotation. The base quad table is empty; the reifier and annotation land in
        // their own tables (parity gate R1).
        let nt = concat!(
            "<https://e/r> <http://www.w3.org/1999/02/22-rdf-syntax-ns#reifies> ",
            "<<( <https://e/s> <https://e/p> <https://e/o> )>> .\n",
            "<https://e/r> <https://e/confidence> \"0.9\" .\n",
        );
        let ds = parse_dataset(nt.as_bytes(), "application/n-triples", None).expect("parse");
        assert_eq!(ds.quad_count(), 0, "reifier rows are not base quads");
        assert_eq!(ds.reifiers().count(), 1);
        assert_eq!(ds.annotations().count(), 1);
    }

    #[test]
    fn turtle_base_resolves_relative_iri() {
        // A relative-IRI Turtle doc parsed with a base resolves the subject against it.
        let ttl = "<rel> <https://e/p> <https://e/o> .\n";
        let ds = parse_dataset(ttl.as_bytes(), "text/turtle", Some("https://example.org/"))
            .expect("parse with base");
        assert_eq!(ds.quad_count(), 1);
        assert!(
            ds.term_id_by_value(&TermValue::Iri("https://example.org/rel".to_owned()))
                .is_some(),
            "relative <rel> must resolve against the base IRI"
        );
    }

    #[test]
    fn literal_direction_survives_parse() {
        let nt = concat!(
            "<https://e/s> <https://e/p> ",
            "\"\u{0645}\u{0631}\u{062d}\u{0628}\u{0627}\"@ar--rtl .\n",
        );
        let ds = parse_dataset(nt.as_bytes(), "application/n-triples", None).expect("parse");
        // The IR expands a language-tagged literal's datatype to rdf:langString (C0.1)
        // and keeps the base direction in the literal identity key (NOT dirLangString).
        assert!(
            ds.term_id_by_value(&TermValue::Literal {
                lexical_form: "\u{0645}\u{0631}\u{062d}\u{0628}\u{0627}".to_owned(),
                datatype: "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString".to_owned(),
                language: Some("ar".to_owned()),
                direction: Some(RdfTextDirection::Rtl),
            })
            .is_some(),
            "an rtl directional literal must survive the parse"
        );
    }

    #[test]
    fn invalid_utf8_hard_fails() {
        let err =
            parse_dataset(&[0xff, 0xfe], "text/turtle", None).expect_err("invalid utf-8 must fail");
        assert_eq!(err.code, "native-codec-utf8");
    }

    #[test]
    fn malformed_text_is_rejected_without_unwinding() {
        // The first-party line/Turtle-family parser (EPIC #906) returns a clean parse
        // diagnostic for malformed input rather than unwinding — strictly better than
        // the prior gmeow-gts codec, which panicked on this fragment and relied on the
        // `catch_unwind` guard to convert the panic to `native-codec-panic`. The guard
        // is retained for any genuine downstream panic; here the path now reports a
        // structured `native-codec-parse` error.
        let err = parse_dataset("0À".as_bytes(), "text/turtle", None)
            .expect_err("malformed input must be rejected without unwinding");
        assert_eq!(err.code, "native-codec-parse");
    }

    #[test]
    fn unknown_media_type_hard_fails() {
        let err =
            parse_dataset(b"", "application/json", None).expect_err("unknown media type must fail");
        assert_eq!(err.code, "native-codec-unsupported-format");
    }
}
